<resources>
    <string name="app_name">Examen Moviles</string>
    <string name="medicina">Medicina</string>
    <string name="paciente">Paciente</string>
    <string name="details_btn">Detalles</string>
    <string name="create_btn">Guardar</string>
    <string name="create">Crear</string>
    <string name="list_btn">Listar</string>
    <string name="new_btn">Nuevo</string>
    <string name="menu_edit">Editar</string>
    <string name="menu_delete">Eliminar</string>
    <string name="menu_share">Compartir</string>
    <string name="details_autor">Detalles Paciente</string>
    <string name="create_autor">Creacion Paciente</string>
    <string name="edit_autor">Editar Paciente</string>
    <string name="details_book">Detalles Medicina</string>
    <string name="create_book">Creacion Medicina</string>
    <string name="edit_book">Editar Medicina</string>
    <string name="book_listt">Lista Medicina</string>
    <string name="name">Nombre:</string>
    <string name="last_name">Apellido:</string>
    <string name="fecha_nacimiento">Fecha Nacimiento:</string>
    <string name="numero_libros">Numero Hijos:</string>
    <string name="ecuatoriano">Afiliado:</string>
    <string name="isbn">Gramos A Consumir:</string>
    <string name="numero_paginas">Cantidad a Ingerir:</string>
    <string name="edicion">Descripcion:</string>
    <string name="fecha_publicacion">Fecha Caducidad:</string>
    <string name="editorial">Composion:</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="confirmation">Seguro desea eliminar?</string>
    <string name="btn_listar2">Mapas</string>
    <string name="title_activity_google_maps">Map</string>
    <string name="title_activity_login">Inicio</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="title_activity_create_activity">CreateActivityActivity</string>
    <string name="button_find">Buscar</string>
    <string name="button_medicinas">Ver Medicinas</string>
    <string name="passwordUser">Contraseña</string>
    <string name="buttonCamara">Tomar Foto</string>
    <string name="image_view_camara">fotoMedicina</string>
    <string name="title_activity_seleccionar_ubicacion">Map</string>
    <string name="title_activity_ubicacion_entrega">Map</string>
</resources>
